# DSE2

./: CMakeLists.txt
applications/: CMakeLists.txt
applications/getting_started/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/core/: application.h  component.h  events.h  scheduler.h  system.h  task.h
engine/include/game/: entity.h  game.h  scene.h
engine/include/graphics/: renderer.h
engine/include/resources/: resource.h  resource_manager.h
engine/src/core/: application.cpp  component.cpp  events.cpp  scheduler.cpp  system.cpp  task.cpp
engine/src/game/: entity.cpp  game.cpp  scene.cpp
engine/src/graphics/: renderer.cpp
engine/src/resources/: resource.cpp  resource_manager.cpp
